--- a/SpringerTests/SpringerTests/App.config
+++ b/SpringerTests/SpringerTests/App.config
@@ -5,7 +5,5 @@
   </configSections>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider --><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="SpecRun" /><plugins>
-      <add name="SpecRun" />
-    </plugins><unitTestProvider name="NUnit" /></specFlow>
+    </specFlow>
 </configuration>
