--- a/SpringerTests/SpringerTests/SpringerTests.csproj
+++ b/SpringerTests/SpringerTests/SpringerTests.csproj
@@ -64,6 +64,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SearchTest.feature</DependentUpon>
     </Compile>
+    <Compile Include="SearchTestStepsUpdates.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
